<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/llama"
    android:padding="0dp"
    tools:context=".advice.AdviceActivity">


    <TextView
        android:id="@+id/newTheoryTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorButton"
        android:text="@string/newTheory_bar_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextButtonWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/bananaButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:text="@string/banana_button_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="50sp"
        android:layout_marginBottom="500sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextButtonBlack"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/user_text_label" />

        <RelativeLayout
            android:background="@color/colorTextButtonWhiteOpacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editText"
                android:textColor="@color/colorTextButtonBlack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/user_edit_text"
                android:visibility="visible" />
        </RelativeLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>